--- a/esp32/netmcu/components/app_main/CMakeLists.txt
+++ b/esp32/netmcu/components/app_main/CMakeLists.txt
@@ -3,7 +3,7 @@ set(srcs esp32/main.cc esp32/main_setup.cc esp32/main_loop.cc esp32/unity_setup.
 idf_component_register(
     SRCS ${srcs}
     INCLUDE_DIRS "./include"
-    REQUIRES app_settings utils_debug utils_misc firmware_update
+    REQUIRES app_settings utils_debug utils_misc firmware_update weather
     PRIV_REQUIRES stm32 main_loop utils_time net app_net app_misc app_settings app_cli app_settings utils_debug key_value_store utils_misc  storage txtio net_mqtt_app stm32_com net_http_server http_server_content
                   nvs_flash driver esp_event esp_netif
 )
