--- a/esp32/netmcu/components/webapp/njs/package.json
+++ b/esp32/netmcu/components/webapp/njs/package.json
@@ -9,27 +9,26 @@
 		"dev": "nollup -c"
 	},
 	"devDependencies": {
-		"@rollup/plugin-alias": "^3.1.5",
-		"@rollup/plugin-commonjs": "^22.0.1",
-		"@rollup/plugin-json": "^4.0.3",
-		"@rollup/plugin-node-resolve": "^13.0.4",
-		"@rollup/plugin-strip": "^2.1.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"js-base64": "^3.6.1",
-		"node-sass": "^7.0.1",
-		"nollup": "^0.19.0",
-		"postcss": "^8.3.6",
-		"postcss-load-config": "^4.0.1",
-		"rollup": "^2.76.0",
-		"rollup-plugin-css-only": "^3.1.0",
+		"@rollup/plugin-alias": "^5.1.0",
+		"@rollup/plugin-commonjs": "^25.0.7",
+		"@rollup/plugin-json": "^6.1.0",
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-strip": "^3.0.4",
+		"eslint-plugin-svelte": "^2.35.1",
+		"js-base64": "^3.7.7",
+		"nollup": "^0.21.0",
+		"postcss": "^8.4.35",
+		"postcss-load-config": "^5.0.3",
+		"rollup": "^4.12.0",
+		"rollup-plugin-css-only": "^4.5.2",
 		"rollup-plugin-eslint": "^7.0.0",
-		"rollup-plugin-svelte": "^7.1.0",
-		"rollup-plugin-terser": "^7.0.2",
+		"rollup-plugin-svelte": "^7.1.6",
+		"sass": "^1.71.0",
 		"sirv-cli": "^2.0.2",
-		"svelte": "^3.49.0",
-		"svelte-i18n": "^3.3.10",
-		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.6"
+		"svelte": "^4.2.12",
+		"svelte-i18n": "^4.0.0",
+		"svelte-preprocess": "^5.1.3",
+		"tailwindcss": "^3.4.1"
 	},
 	"jshintConfig": {
 		"esversion": 6,
@@ -50,7 +49,8 @@
 		}
 	},
 	"dependencies": {
-		"autoprefixer": "^10.3.3",
+		"@wwa/rollup-plugin-terser": "^1.1.2",
+		"autoprefixer": "^10.4.18",
 		"svelte-icons": "^2.1.0"
 	}
 }
