Fix test build error

--- a/esp32/netmcu/components/protobuf/CMakeLists.txt
+++ b/esp32/netmcu/components/protobuf/CMakeLists.txt
@@ -21,7 +21,7 @@ idf_component_register(
 component_compile_options(${comp_compile_opts})
 component_compile_features(${comp_compile_feats})
 
- 
+ if(!TEST_HOST)
  add_custom_command(
      OUTPUT ${COMPONENT_DIR}/_force.h ${COMPONENT_DIR}/mcu_com.cc
      COMMAND make -B all -C ${pb_path} pbgen=${COMPONENT_DIR}/../../components-mcu/nanopb/nanopb/generator/nanopb_generator.py
@@ -32,3 +32,4 @@ component_compile_features(${comp_compile_feats})
   
 add_custom_target(pbuf_files ALL  DEPENDS ${COMPONENT_DIR}/_force.h )
 add_dependencies(  ${COMPONENT_LIB} pbuf_files)
+endif()
