--- a/esp32/netmcu/components/protobuf/CMakeLists.txt
+++ b/esp32/netmcu/components/protobuf/CMakeLists.txt
@@ -14,7 +14,7 @@ endif()
 
 idf_component_register(
     SRCS ${srcs}
-    INCLUDE_DIRS "./include" "./include/protobuf"
+    INCLUDE_DIRS "./include" "./include/protobuf" ${pb_path}
     REQUIRES nanopb
    )
  
@@ -23,7 +23,7 @@ component_compile_features(${comp_compile_feats})
 
  if(!TEST_HOST)
  add_custom_command(
-     OUTPUT ${COMPONENT_DIR}/_force.h ${COMPONENT_DIR}/mcu_com.cc
+     OUTPUT ${COMPONENT_DIR}/_force.h ${COMPONENT_DIR}/mcu_com.cc 
      COMMAND make -B all -C ${pb_path} pbgen=${COMPONENT_DIR}/../../components-mcu/nanopb/nanopb/generator/nanopb_generator.py
      COMMAND echo "//////////////////////////////"
      COMMAND ln -sf ${pb_path}/build/mcu_com.pb.c ${COMPONENT_DIR}/mcu_com.cc
