--- a/mcu_com/Makefile
+++ b/mcu_com/Makefile
@@ -3,7 +3,7 @@ build_dir := ./build
 
 .PHONY: all
 
-all : build/mcu_com.pb.c build/mcu_com.js
+all : build/mcu_com.pb.c build/mcu_com.pb.h build/mcu_com.js
 
 pbgen ?= nanopb_generator.py
 
@@ -15,7 +15,7 @@ pbgen ?= nanopb_generator.py
 
 $(build_dir)/%.pb: $(proto_dir)/%.proto
 	mkdir -p $(build_dir) && protoc -o$@ --proto_path=$(proto_dir) $<
-$(build_dir)/%.pb.c: $(build_dir)/%.pb
+$(build_dir)/%.pb.c $(build_dir)/%.pb.h: $(build_dir)/%.pb
 	mkdir -p $(build_dir) && cd $(build_dir) && $(pbgen) $(notdir $<)
 
 $(build_dir)/%.js: $(proto_dir)/%.proto
