--- a/esp32/netmcu/components/webapp/njs/package.json
+++ b/esp32/netmcu/components/webapp/njs/package.json
@@ -22,6 +22,7 @@
 		"rollup": "^4.12.0",
 		"rollup-plugin-css-only": "^4.5.2",
 		"rollup-plugin-eslint": "^7.0.0",
+		"rollup-plugin-livereload": "^2.0.5",
 		"rollup-plugin-svelte": "^7.1.6",
 		"sass": "^1.71.0",
 		"sirv-cli": "^2.0.2",
