Improve build files

--- a/stm32/rv/Makefile
+++ b/stm32/rv/Makefile
@@ -74,41 +74,21 @@ host-test-all:
 	make -s --no-print-directory  host.tests.configure host.tests.ctest
 
 
+
 ############# Doxygen ###################
+doxy_flavors=usr dev api
 DOXY_BUILD_PATH=$(THIS_ROOT)/build/doxy
+DOXYFILE_PATH=$(THIS_ROOT)
+include doxygen_rules.mk
 
-
-.PHONY: doxy-usr-view  doxy-dev-view  doxy-api-view
-.PHONY: doxy-usr-build doxy-dev-build doxy-api-build 
-
-$(DOXY_BUILD_PATH)/%/html/index.html: /tmp/doxy_%_file 
-	mkdir -p $(dir $@)
-	doxygen $^
-	
-
-doxy-usr-build: $(DOXY_BUILD_PATH)/usr/html/index.html FORCE
-doxy-usr-view: doxy-usr-build
-	xdg-open $(DOXY_BUILD_PATH)/usr/html/index.html &
-doxy-dev-build: $(DOXY_BUILD_PATH)/dev/html/index.html FORCE
-doxy-dev-view: doxy-dev-build
-	xdg-open $(DOXY_BUILD_PATH)/dev/html/index.html &
-doxy-api-build: $(DOXY_BUILD_PATH)/api/html/index.html FORCE
-doxy-api-view: doxy-api-build
-	xdg-open $(DOXY_BUILD_PATH)/api/html/index.html &
-
-
-/tmp/doxy_%_file: ./Doxyfile_% /tmp/doxy_input_%
-	cat $^ > $@
-/tmp/doxy_input_dev: FORCE
-	git ls-files '*.h' '*.c' '*.hh' '*.cc' '*.cpp' | fgrep -v -e CMSIS -e STM32F10x | sed "s~^~INPUT += $(THIS_ROOT)/~" > $@
-/tmp/doxy_input_api: FORCE
-	git ls-files '*.h' '*.hh' | fgrep -v -e CMSIS -e STM32F10x | sed "s~^~INPUT += $(THIS_ROOT)/~" > $@
-/tmp/doxy_input_usr: FORCE
+$(DOXY_BUILD_PATH)/usr/input_files: $(DOXY_BUILD_PATH)/usr FORCE
 	echo "" > $@
-doxy-%-view: doxy-%-build FORCE
-	xdg-open $(DOXY_BUILD_PATH)/$*/html/index.html
 	
+$(DOXY_BUILD_PATH)/api/input_files: $(DOXY_BUILD_PATH)/api FORCE
+	git ls-files '*.h' '*.hh' | fgrep -v -e CMSIS -e STM32F10x | sed "s~^~$(THIS_ROOT)/~" > $@
+	
+$(DOXY_BUILD_PATH)/dev/input_files: $(DOXY_BUILD_PATH)/dev FORCE
+	git ls-files '*.h' '*.c' '*.hh' '*.cc' '*.cpp' | fgrep -v -e CMSIS -e STM32F10x | sed "s~^~$(THIS_ROOT)/~" > $@
 
 
-.PHONY: FORCE	
-FORCE:
+
